style.css
body {
    font-family: 'Cabin', sans-serif;
}

h1 {
    font-family: 'Muli', sans-serif;
}

#left_side {
    background-color: grey;
    background-image: url('img/selfphoto.jpeg');
    background-size: cover;
    color: white;
}

#left_side.initial {
    width: 0;
    height: 0;
    opacity: 0;
}

#right_side {
    height: 100%;
}

.panel-default {
    border-color: #ddd;
    padding: 10px 10px 10px 40px;
    margin: 10px 0px 20px;
}

#right_side_content {
    margin-top: 50px;
    margin-bottom: 200px;
    padding-left: 60px;
    padding-right: 60px;
}

#right_side_content.initial {
    margin-top: 600px;
    opacity: 0;
}

.image_dim {
    background-color: rgba(0, 0, 0, 1);
    background-image: linear-gradient(to right, rgba(54, 209, 220, 0.5) 0%, rgba(91, 134, 229, 0.6) 100%);
    height: 100%;
}

.image_dim.load {
    background-color: rgba(0, 0, 0, 0.4)
}

#intro_box {
    text-align: center;
    max-width: 50%;
    position: relative;
    margin: auto;
    opacity: 0;
    padding: 80px 0px 80px 0px;
}

#intro_box.load {
    opacity: 1;
    padding: 100px 0px 60px 0px;
}

span.title {
    font-family: 'Muli', sans-serif;
    font-weight: 700;
    font-size: 48px;
}

span.popoverheading {
    font-family: 'Muli', sans-serif;
    color: white;
    font-size: 20px;
}

.popover-title {
    background-color: #5f7bab;
}

p {
    font-weight: 200;
}

span.head1 {
    font-size: 24px;
}

span.head2 {
    font-size: 12px;
    color: rgba(220, 220, 220, 0.7);
    font-style: italic;
}

span.subtitle {
    font-size: 14px;
}

span.date {
    font-style: italic;
    font-size: 12px;
    color: grey
}

#contact_buttons {
    opacity: 0;
    padding: 10px;
    transition: all 0.2s ease, background-color 1ms;
}

#contact_buttons i {
    margin: 0px 15px;
}

#contact_buttons a {
    color: white;
    transition: all 0.2s ease;
}

#contact_buttons a:hover {
    color: pink;
}

#skills_list {
    margin-left: -25px
}

.heading {
    font-style: italic;
    margin-top: 0px;
    color: rgba( 98, 9, 180, 1);
    margin-left: -20px;
}

.float_img {
    float: left;
    width: 80px;
}

.float_skills {
    float: left;
    width: 50px;
    margin: 0 10px;
}

.float_text {
    float: left;
}

.affix {
    color: white;
    top: 0;
    left: 0;
    background-color: rgba(91, 134, 229, 0.9);
    width: 100%;
    z-index: 1;
    text-align: right;
    float: right;
}

#navtitle {
    display: none;
    opacity: 0;
    float: left;
    font-size: 20px;
}

.affix>#navtitle {
    display: block;
    transition: all 0.5s;
    opacity: 1;
}


/* desktop displays */

@media (min-width: 768px) {
    #right_side {
        overflow-y: scroll;
        width: 50%;
        float: right;
    }
    #right_side_content {
        margin-top: 100px;
        padding-left: 80px;
        padding-right: 80px;
    }
    #left_side {
        height: 100%;
        width: 50%;
        float: left;
    }
    #page {
        height: 100vh
    }
    #intro_box {
        top: 40%;
        opacity: 0;
    }
    #intro_box.load {
        top: 30%;
        opacity: 1;
    }
}

